crates/pardosa-genome/tests/compile_fail/evt_002.stderr
error: EVT-002: GenomeSafe: HashMap has non-deterministic iteration order. Use BTreeMap for deterministic serialization.
 --> tests/compile_fail/evt_002.rs:8:10
  |
8 |     map: HashMap<u32, u32>,
  |          ^^^^^^^^^^^^^^^^^
